fixed grid alignment in projects section

--- a/style.css
+++ b/style.css
@@ -76,8 +76,7 @@ header{
     display: flex;
     justify-content: space-between;
     padding: 1em; 
-    background-color: var(--clr-accent);  
-    
+    background-color: var(--clr-accent); 
 }
 
 .logo{
@@ -104,9 +103,6 @@ header{
 .reach_out a{
     color: var(--clr-light);
 }
-
-
-/* greeting */
 
 
 
@@ -150,9 +146,7 @@ margin-bottom: 1em;
 
 .intro{
     position: relative;
-    margin: 5em auto;
-    padding-top: 30px;
-    padding-bottom: 30px;
+    margin: 5em auto;   
 }
 
 
@@ -233,10 +227,17 @@ margin-bottom: 1em;
 .projects{
     background-color: var(--clr-dark);
 }
+
 .projects h2{
-    padding: 2em;
+    padding-top: 2em;
+    padding-bottom: 0;
     color: var(--clr-light);
 }
+.projects h4{
+    padding-top: 0;
+    color: var(--clr-light);
+}
+
 
 .project_display{
     display: flex;
@@ -252,17 +253,14 @@ margin-bottom: 1em;
     border-radius: 5px;
     margin: 3em 4em;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
-    background-color: var(--clr-accent);
-    /* background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%23e3d5ca' fill-opacity='0.4' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");  */
-    align-items: center;
-    
+    background-color: var(--clr-accent);    
 }
 
 .project_display-image{
-    margin: 2em;
+    margin: 2em;   
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
     overflow: hidden;
-    height: 190px;
+    height: 180px;
     width: 250px;
     
             
@@ -298,16 +296,20 @@ margin-bottom: 1em;
 
 .project_display{
     display: grid;
-    grid-template-columns: repeat(2, auto);
-    grid-column-gap: 2em;
-    grid-row-gap: 2em;
+    grid-template-columns: repeat(2, 1fr);
+    grid-column-gap: 1em;
+    grid-row-gap: 1em;
+    grid-auto-rows: minmax(100px, auto);
    
 }
 
+.project_display-item{ 
+    margin: 1em 1em;
+}
 
 
 .project_display-image{
-    margin: 5em; 
+   margin: 2em auto; 
 }
 }
 
